style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");

body {
  font-family: "Roboto", sans-serif;
}

.books-container {
  display: grid;
  grid-template-columns: repeat(4, 20vw);
  grid-auto-columns: 20vw;
  grid-auto-rows: auto;
  gap: 5vw;
}

.book {
  width: 20vw;
  height: auto;
  background-color: lightblue;
  text-align: center;
}

.title {
  overflow: auto;
  height: 40px;
}

.new-book-button {
  position: fixed;
  bottom: 4vh;
  right: 2vw;
  background-color: blue;
  color: white;
  border-radius: 8px;
  width: 10vw;
  height: 5vh;
  font-weight: bold;
  border: none;
}

.new-book-button:hover {
  width: 11vw;
  height: 5.5vh;
}

.new-book-button:active {
  background-color: darkblue;
}

.delete-book-button {
  background-color: red;
  color: white;
  border: none;
  position: relative;
  bottom: 13.6rem;
  left: 9.1vw;
  font-weight: bold;
}

.delete-book-button:hover {
  background-color: darkred;
}

.toggle-reading-status-button.read,
.toggle-reading-status-button.not-read {
  width: 30.72px;
  height: 30.2px;
  border-radius: 8px;
  border: none;
}

.toggle-reading-status-button.read {
  background: url(./icons/toggle-switch.svg);
}

.toggle-reading-status-button.not-read {
  background: url(./icons/toggle-switch-off.svg);
}

